# Teeworlds-Texture-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  GENUS_PATCH_NOTES.md  README.md
IA-TRAIN/: .gitignore  README.md  README_AI.md  genus_ai_bridge.py
assets/icons/: README.md
cmake/: copy_runtime_dlls.cmake  windows_app.rc.in
data/defaults/: README.md
data/templates/: teeworlds_textures.json
docs/: BUILDING.md  GENUS_AI_SETUP.md  ROADMAP.md
scripts/: focus_texture.py  generate_default_templates.py  package_windows.ps1
src/: main.cpp
